--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,8 @@
   <title>Content Manager</title>
 </head>
 <body>
+  <!-- Include the script that builds the page and powers Netlify CMS -->
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   <!-- Register Color widget -->
   <!-- https://github.com/ekoeryanto/netlify-cms-widgets/tree/master/widgets/color -->
   <script src="../assets/js/react.min.js"></script>
